--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,14 +39,15 @@ android {
 }
 
 dependencies {
-    def dagger_version = '2.37'
-    def retrofit_version = '2.9.0'
-
     implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    
+    // lifecycle
+    def lifecycle_ver = '2.3.0'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_ver"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ver"
 
     // coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2'
@@ -55,10 +56,12 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.1'
 
     // retrofit
+    def retrofit_version = '2.9.0'
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
     // dagger
+    def dagger_version = '2.37'
     implementation "com.google.dagger:dagger:$dagger_version"
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
@@ -67,6 +70,7 @@ dependencies {
     // coil
     implementation("io.coil-kt:coil:1.4.0")
 
+    // test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
